--- a/starter/app/src/main/res/xml/content_detail_scene.xml
+++ b/starter/app/src/main/res/xml/content_detail_scene.xml
@@ -13,34 +13,34 @@
             android:id="@+id/fileNameTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginStart="@dimen/medium_margin"
+            android:layout_marginTop="@dimen/large_margin"
+            android:alpha="0"
             android:textSize="@dimen/default_text_size"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:alpha="0" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Constraint
             android:id="@+id/statusTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginStart="@dimen/medium_margin"
+            android:layout_marginTop="@dimen/medium_margin"
+            android:alpha="0"
             android:textSize="@dimen/default_text_size"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/fileNameTextView"
-            android:alpha="0" />
+            app:layout_constraintTop_toBottomOf="@+id/fileNameTextView" />
 
         <Constraint
             android:id="@+id/backButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="440dp"
+            android:alpha="0"
             android:text="@string/back"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/statusTextView"
-            android:alpha="0" />
+            app:layout_constraintTop_toBottomOf="@+id/statusTextView" />
 
     </ConstraintSet>
 
@@ -50,39 +50,39 @@
             android:id="@+id/fileNameTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginStart="@dimen/medium_margin"
+            android:layout_marginTop="@dimen/large_margin"
+            android:alpha="1"
             android:textSize="@dimen/default_text_size"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:alpha="1" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Constraint
             android:id="@+id/statusTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginStart="@dimen/medium_margin"
+            android:layout_marginTop="@dimen/medium_margin"
+            android:alpha="1"
             android:textSize="@dimen/default_text_size"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/fileNameTextView"
-            android:alpha="1" />
+            app:layout_constraintTop_toBottomOf="@+id/fileNameTextView" />
 
         <Constraint
             android:id="@+id/backButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="440dp"
+            android:alpha="1"
             android:text="@string/back"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/statusTextView"
-            android:alpha="1" />
+            app:layout_constraintTop_toBottomOf="@+id/statusTextView" />
 
     </ConstraintSet>
     <Transition
-        app:constraintSetStart="@+id/start"
+        app:autoTransition="jumpToEnd"
         app:constraintSetEnd="@+id/end"
-        app:autoTransition="jumpToEnd" />
+        app:constraintSetStart="@+id/start" />
 
 </MotionScene>
