--- a/starter/app/src/main/res/values/dimens.xml
+++ b/starter/app/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <resources>
-    <dimen name="fab_margin">16dp</dimen>
     <dimen name="medium_margin">16dp</dimen>
     <dimen name="large_margin">32dp</dimen>
     <dimen name="default_text_size">20sp</dimen>
+    <dimen name="radio_button_height">48dp</dimen>
+    <dimen name="custom_button_height">60dp</dimen>
 </resources>
