--- a/starter/app/src/main/res/xml/content_detail_scene.xml
+++ b/starter/app/src/main/res/xml/content_detail_scene.xml
@@ -5,7 +5,8 @@
     <Transition
         app:constraintSetEnd="@+id/end"
         app:constraintSetStart="@+id/start"
-        app:duration="5000" />
+        app:duration="5000"
+        app:autoTransition="animateToEnd"/>
 
     <ConstraintSet android:id="@+id/start">
 
